--- a/fire-carrier-beautiful-updated.html
+++ b/fire-carrier-beautiful-updated.html
@@ -3,20 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fire-Carrier-Beautiful-Updated</title>
+  <title>The Fire Carrier</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Open Sans', sans-serif;
-      background-color: #e9f5f2;
-      color: #00332e;
+      background: linear-gradient(to bottom, #fdfcfb, #e9f5f2);
+      color: #1e2f2b;
     }
-    .logo {
-      max-height: 120px;
-      display: block;
-      margin: 0 auto 2rem;
-    }
+
     .site-title {
       text-align: center;
       font-family: 'Playfair Display', serif;
@@ -24,13 +20,9 @@
       color: #004d43;
       margin-top: 1.5rem;
       margin-bottom: 0.5rem;
-      opacity: 0;
-      animation: fadeInTitle 1.5s ease-out forwards;
+      animation: fadeIn 1.5s ease-out;
     }
-    @keyframes fadeInTitle {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+
     nav {
       display: flex;
       justify-content: center;
@@ -38,7 +30,9 @@
       gap: 2rem;
       background-color: #d5f2ed;
       padding: 1rem;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.05);
     }
+
     nav a {
       text-decoration: none;
       color: #004d43;
@@ -46,22 +40,74 @@
       font-size: 1.1rem;
       transition: color 0.3s ease;
     }
+
     nav a:hover {
       color: #002621;
     }
+
     main {
       background: #ffffffcc;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       padding: 3rem 2rem;
       max-width: 860px;
       margin: 3rem auto;
+      animation: fadeIn 2s ease;
     }
+
+    .logo {
+      max-height: 100px;
+      display: block;
+      margin: 0 auto 1.5rem;
+    }
+
+    .story-title {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      color: #b23b3b;
+      text-align: center;
+      margin-bottom: 0.5rem;
+    }
+
+    em {
+      display: block;
+      text-align: center;
+      color: #555;
+      margin-bottom: 2rem;
+      font-style: italic;
+    }
+
+    p {
+      line-height: 1.8;
+      margin-bottom: 1.5rem;
+    }
+
+    blockquote {
+      border-left: 4px solid #ffa07a;
+      padding-left: 1rem;
+      color: #5c3a3a;
+      margin: 1.5rem 0;
+      font-style: italic;
+    }
+
+    hr {
+      border: none;
+      border-top: 1px dashed #ccc;
+      margin: 2rem 0;
+    }
+
     footer {
       text-align: center;
-      padding: 1rem;
+      padding: 1.5rem;
       background: #d7f0e9;
       color: #001219;
+      font-size: 0.9rem;
+      margin-top: 3rem;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
@@ -75,9 +121,10 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
+
   <main>
     <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
-    
+
     <h1 class="story-title">The Fire Carrier</h1>
     <em>—a poetic story for anyone who feels deeply, burns brightly, and walks between worlds—</em>
 
@@ -88,74 +135,4 @@
     but the kind that made stars.</p>
 
     <p>The elders whispered, “This one is different.”<br>
-    The winds leaned closer when they spoke.<br>
-    The rivers paused to listen.<br>
-    God smiled.</p>
-
-    <p>This child laughed with thunder in their throat<br>
-    and dreamed in colors the world hadn’t yet invented.<br>
-    They touched joy with bare hands—<br>
-    and it danced.</p>
-
-    <p>But one day, the fire grew too wild.<br>
-    It surged beyond their ribs and spun them into the sky.<br>
-    They flew too fast. Too far.<br>
-    The stars became sharp. The light turned blinding.<br>
-    Even angels blinked.</p>
-
-    <p>When they fell,<br>
-    they fell hard.<br>
-    To the ground.<br>
-    To the quiet.<br>
-    To the shadows under their own skin.</p>
-
-    <hr>
-
-    <p>They thought the fire was gone.</p>
-
-    <blockquote>
-      “This is not a punishment.”<br>
-      “You were born to carry fire.”<br>
-      “But you must learn to walk with it, not run.”
-    </blockquote>
-
-    <p>So they began the long walk.</p>
-
-    <p>They learned the rhythm of breath,<br>
-    the sacred pause of rest.<br>
-    They carved cups from their hands to hold the flame—<br>
-    not too tight, not too loose.</p>
-
-    <p>They built altars of stability,<br>
-    placed stones of routine,<br>
-    sang songs of self-compassion when the fire whispered lies.</p>
-
-    <p>And slowly—<br>
-    the fire became a companion.<br>
-    Not a master. Not a monster.<br>
-    But a <strong>living light</strong>.</p>
-
-    <p>Now, when they speak,<br>
-    truth pours like honey and lightning.<br>
-    When they move,<br>
-    the room softens, aware of the heat they carry.<br>
-    And when they cry,<br>
-    even God listens more closely.</p>
-
-    <hr>
-
-    <p>People still ask,<br>
-    “Is it a curse or a blessing?”</p>
-
-    <blockquote>
-      “It’s both. It’s neither.”<br>
-      “It’s a fire.<br>
-      And I am learning to carry it with grace.”
-    </blockquote>
-  
-  </main>
-  <footer>
-    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
-  </footer>
-</body>
-</html>
+    The winds leaned
