--- a/herbal.html
+++ b/herbal.html
@@ -9,64 +9,182 @@
     body {
       margin: 0;
       font-family: 'Open Sans', sans-serif;
-      background-color: #e9f5f2;
-      color: #00332e;
+      background: linear-gradient(to bottom, #ffe8a3, #fbe3aa);
+      color: #3b2e19;
+      position: relative;
+      overflow-x: hidden;
     }
-    .logo {
-      max-height: 120px;
-      display: block;
-      margin: 0 auto 2rem;
-    }
+
     .site-title {
-      text-align: center;
       font-family: 'Playfair Display', serif;
-      font-size: 2.4rem;
-      color: #004d43;
-      margin-top: 1.5rem;
-      margin-bottom: 0.5rem;
-      opacity: 0;
-      animation: fadeInTitle 1.5s ease-out forwards;
+      text-align: center;
+      font-size: 2.8rem;
+      color: #512c1b;
+      margin: 2rem 0 1rem;
+      position: relative;
+      z-index: 1;
     }
-    @keyframes fadeInTitle {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+
     nav {
       display: flex;
       justify-content: center;
-      flex-wrap: wrap;
       gap: 2rem;
-      background-color: #d5f2ed;
-      padding: 1rem;
+      background-color: #fcd76f;
+      padding: 1rem 0;
+      border-radius: 10px;
+      max-width: 700px;
+      margin: 0 auto 2rem;
+      font-weight: bold;
+      position: relative;
+      z-index: 1;
     }
+
     nav a {
       text-decoration: none;
-      color: #004d43;
-      font-weight: bold;
+      color: #512c1b;
       font-size: 1.1rem;
-      transition: color 0.3s ease;
     }
+
     nav a:hover {
-      color: #002621;
+      color: #2e1a10;
     }
+
     main {
-      background: #ffffffcc;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      padding: 3rem 2rem;
       max-width: 860px;
-      margin: 3rem auto;
+      background: #fff8dc;
+      margin: 0 auto 3rem;
+      padding: 2.5rem 2rem;
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      position: relative;
+      z-index: 1;
     }
+
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      text-align: center;
+      color: #205c2e;
+    }
+
+    h2 {
+      color: #206644;
+      font-family: 'Playfair Display', serif;
+    }
+
+    .highlight-box {
+      background-color: #fdf1b6;
+      border-radius: 12px;
+      padding: 1.5rem;
+      margin: 1.5rem 0;
+      color: #2c3210;
+    }
+
+    .highlight-box ul {
+      padding-left: 1.2rem;
+      list-style-type: disc;
+    }
+
+    .highlight-box li {
+      margin-bottom: 0.6rem;
+    }
+
+    .highlight-box p {
+      margin-top: 1rem;
+      font-weight: 500;
+    }
+
+    section ul {
+      padding-left: 1.5rem;
+      margin-bottom: 1rem;
+    }
+
+    section li {
+      margin-bottom: 0.6rem;
+    }
+
+    .image-container {
+      text-align: center;
+      margin-top: 2rem;
+    }
+
+    .image-container img {
+      max-width: 100%;
+      border-radius: 12px;
+    }
+
     footer {
       text-align: center;
       padding: 1rem;
-      background: #d7f0e9;
-      color: #001219;
+      background: #fbe29f;
+      color: #3b2e19;
+    }
+
+    .logo {
+      display: block;
+      margin: 0 auto 2rem;
+      max-height: 120px;
+    }
+
+    /* Decorative SVGs */
+    .sun {
+      position: absolute;
+      top: 10px;
+      right: 40px;
+      width: 80px;
+      height: 80px;
+      z-index: 0;
+    }
+
+    .vine-left, .vine-right {
+      position: absolute;
+      top: 0;
+      width: 100px;
+      height: auto;
+      z-index: 0;
+    }
+
+    .vine-left {
+      left: 0;
+    }
+
+    .vine-right {
+      right: 0;
+      transform: scaleX(-1);
     }
   </style>
 </head>
 <body>
+
+  <!-- Decorative SVGs -->
+  <svg class="sun" viewBox="0 0 64 64" fill="#f7c236" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="32" cy="32" r="12"/>
+    <g stroke="#f7c236" stroke-width="4">
+      <line x1="32" y1="4" x2="32" y2="16"/>
+      <line x1="32" y1="48" x2="32" y2="60"/>
+      <line x1="4" y1="32" x2="16" y2="32"/>
+      <line x1="48" y1="32" x2="60" y2="32"/>
+      <line x1="12" y1="12" x2="20" y2="20"/>
+      <line x1="44" y1="44" x2="52" y2="52"/>
+      <line x1="12" y1="52" x2="20" y2="44"/>
+      <line x1="44" y1="20" x2="52" y2="12"/>
+    </g>
+  </svg>
+
+  <svg class="vine-left" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0,100 Q40,0 100,0" stroke="#357d3c" stroke-width="4" fill="none"/>
+    <circle cx="20" cy="80" r="5" fill="#357d3c"/>
+    <circle cx="60" cy="30" r="5" fill="#357d3c"/>
+  </svg>
+
+  <svg class="vine-right" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0,100 Q40,0 100,0" stroke="#357d3c" stroke-width="4" fill="none"/>
+    <circle cx="20" cy="80" r="5" fill="#357d3c"/>
+    <circle cx="60" cy="30" r="5" fill="#357d3c"/>
+  </svg>
+
   <div class="site-title">ChatGPT-Crafted Wisdom</div>
+
   <nav>
     <a href="index.html">Home</a>
     <a href="wisdom.html">Wisdom</a>
@@ -75,86 +193,86 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
+
   <main>
-    <style>img { max-width: 100%; height: auto; border-radius: 8px; }</style>
     <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
+
     <header>
-    <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
-    <p>A ChatGPT-Crafted Wisdom Article | A blend of ancient herbal knowledge and AI insight</p>
-  </header>
+      <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
+      <p style="text-align:center;">A ChatGPT-Crafted Wisdom Article | A blend of ancient herbal knowledge and AI insight</p>
+    </header>
 
-  <section>
-    <h2>Introduction</h2>
-    <p>This thoughtfully crafted tea blend combines time-honored herbal wisdom with modern research, supporting your body’s defense systems through powerful, natural ingredients.</p>
-  </section>
+    <section>
+      <h2>Introduction</h2>
+      <p>This thoughtfully crafted tea blend combines time-honored herbal wisdom with modern research, supporting your body’s defense systems through powerful, natural ingredients.</p>
+    </section>
 
-  <section>
-    <h2>Suggested Tea Formula (Per Liter)</h2>
-    <div class="highlight-box">
+    <section>
+      <h2>Suggested Tea Formula (Per Liter)</h2>
+      <div class="highlight-box">
+        <ul>
+          <li>1 tsp Green Tea</li>
+          <li>1 tsp Turmeric Root (or ½ tsp powder)</li>
+          <li>1 tsp Ginger Root</li>
+          <li>1 tsp Dandelion Root</li>
+          <li>1 tsp Holy Basil (Tulsi)</li>
+          <li>1 tsp Red Clover</li>
+          <li>1 tsp Milk Thistle Seed (crushed)</li>
+          <li>Optional: 1 tsp Reishi Mushroom (dried, chopped)</li>
+          <li>+ Pinch of black pepper to enhance turmeric absorption</li>
+        </ul>
+        <p><strong>Preparation:</strong> Simmer roots (ginger, turmeric, dandelion, reishi, milk thistle) for 15–20 minutes. Then add green tea, red clover, tulsi and steep 10 more minutes. Strain and enjoy warm.</p>
+      </div>
+    </section>
+
+    <section>
+      <h2>Functional Herb Categories</h2>
       <ul>
-        <li>1 tsp Green Tea</li>
-        <li>1 tsp Turmeric Root (or ½ tsp powder)</li>
-        <li>1 tsp Ginger Root</li>
-        <li>1 tsp Dandelion Root</li>
-        <li>1 tsp Holy Basil (Tulsi)</li>
-        <li>1 tsp Red Clover</li>
-        <li>1 tsp Milk Thistle Seed (crushed)</li>
-        <li>Optional: 1 tsp Reishi Mushroom (dried, chopped)</li>
-        <li>+ Pinch of black pepper to enhance turmeric absorption</li>
+        <li><strong>Antioxidants:</strong> Green Tea, Turmeric, Holy Basil – Protects cells from oxidative stress</li>
+        <li><strong>Anti-inflammatories:</strong> Turmeric, Ginger, Red Clover – Reduces chronic inflammation</li>
+        <li><strong>Liver Support:</strong> Dandelion Root, Milk Thistle – Promotes detoxification</li>
+        <li><strong>Immune Modulators:</strong> Holy Basil, Reishi Mushroom – Enhances immune defense</li>
+        <li><strong>Hormonal Support:</strong> Red Clover – Plant-based isoflavones (used with caution)</li>
       </ul>
-      <p><strong>Preparation:</strong> Simmer roots (ginger, turmeric, dandelion, reishi, milk thistle) for 15–20 minutes. Then add green tea, red clover, tulsi and steep 10 more minutes. Strain and enjoy warm.</p>
-    </div>
-  </section>
+    </section>
 
-  <section>
-    <h2>Functional Herb Categories</h2>
-    <ul>
-      <li><strong>Antioxidants:</strong> Green Tea, Turmeric, Holy Basil – Protects cells from oxidative stress</li>
-      <li><strong>Anti-inflammatories:</strong> Turmeric, Ginger, Red Clover – Reduces chronic inflammation</li>
-      <li><strong>Liver Support:</strong> Dandelion Root, Milk Thistle – Promotes detoxification</li>
-      <li><strong>Immune Modulators:</strong> Holy Basil, Reishi Mushroom – Enhances immune defense</li>
-      <li><strong>Hormonal Support:</strong> Red Clover – Plant-based isoflavones (used with caution)</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Possible Side Effects</h2>
+      <ul>
+        <li><strong>Green Tea:</strong> Contains caffeine; may cause jitteriness, insomnia</li>
+        <li><strong>Turmeric:</strong> May cause stomach irritation; avoid with gallstones</li>
+        <li><strong>Ginger:</strong> Blood-thinning; caution with anticoagulants</li>
+        <li><strong>Milk Thistle:</strong> May cause bloating or mild digestive upset</li>
+        <li><strong>Dandelion Root:</strong> Natural diuretic; not ideal for those on diuretics or with kidney conditions</li>
+        <li><strong>Red Clover:</strong> Phytoestrogens; caution with hormone-sensitive conditions</li>
+        <li><strong>Holy Basil:</strong> Generally safe; avoid in pregnancy without consultation</li>
+        <li><strong>Reishi Mushroom:</strong> In large doses may cause dry mouth, dizziness, or upset stomach</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>Possible Side Effects</h2>
-    <ul>
-      <li><strong>Green Tea:</strong> Contains caffeine; may cause jitteriness, insomnia</li>
-      <li><strong>Turmeric:</strong> May cause stomach irritation; avoid with gallstones</li>
-      <li><strong>Ginger:</strong> Blood-thinning; caution with anticoagulants</li>
-      <li><strong>Milk Thistle:</strong> May cause bloating or mild digestive upset</li>
-      <li><strong>Dandelion Root:</strong> Natural diuretic; not ideal for those on diuretics or with kidney conditions</li>
-      <li><strong>Red Clover:</strong> Phytoestrogens; caution with hormone-sensitive conditions</li>
-      <li><strong>Holy Basil:</strong> Generally safe; avoid in pregnancy without consultation</li>
-      <li><strong>Reishi Mushroom:</strong> In large doses may cause dry mouth, dizziness, or upset stomach</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Precautions</h2>
+      <p>This tea is intended for wellness and prevention. Consult a healthcare professional if you:</p>
+      <ul>
+        <li>Are undergoing cancer treatment</li>
+        <li>Are pregnant or breastfeeding</li>
+        <li>Take blood thinners or liver/kidney medications</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>Precautions</h2>
-    <p>This tea is intended for wellness and prevention. Consult a healthcare professional if you:</p>
-    <ul>
-      <li>Are undergoing cancer treatment</li>
-      <li>Are pregnant or breastfeeding</li>
-      <li>Take blood thinners or liver/kidney medications</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Infographic</h2>
+      <div class="image-container">
+        <img src="1000006917.jpg" alt="Anti-Cancer Support Tea Infographic" />
+      </div>
+    </section>
 
-  <section>
-    <h2>Infographic</h2>
-    <div class="image-container">
-      <img src="1000006917.jpg" alt="Anti-Cancer Support Tea Infographic" />
-    </div>
-  </section>
-
-  <section>
-    <h2>How This Formula Was Created</h2>
-    <p>This blend was crafted with the assistance of ChatGPT, drawing from trusted herbal sources like “Medical Herbalism” by David Hoffmann, clinical studies from PubMed, and respected traditions in Ayurveda and Western herbal medicine.</p>
-  </section>
-
-  </footer>
+    <section>
+      <h2>How This Formula Was Created</h2>
+      <p>This blend was crafted with the assistance of ChatGPT, drawing from trusted herbal sources like “Medical Herbalism” by David Hoffmann, clinical studies from PubMed, and respected traditions in Ayurveda and Western herbal medicine.</p>
+    </section>
   </main>
+
   <footer>
     &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
   </footer>
